--- a/test.html
+++ b/test.html
@@ -35,27 +35,8 @@
                 <p>Información sobre ciber acoso...</p>
             </section>
         </article>
-    
     </main>
-    <footer>
-        <div class="contact-info">
-            <h3>Contacto</h3>
-            <p>Ubicación: Calle Falsa 123, Ciudad, País</p>
-            <p>Teléfono: +123 456 7890</p>
-            <p>Email: contacto@fundacionzulemito.org</p>
-        </div>
-        <div class="contact-form">
-            <h3>Envíanos un mensaje</h3>
-            <form action="send_message.php" method="post">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Mensaje:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
-        <p>Todos los derechos reservados Fundacion Menem ZULEMITO 2025</p>
-    </footer>
+    <footer></footer>
     <script src="js/particles.min.js"></script>
     <script src="js/particlesjs-config.json"></script>
 </body>
