--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
                 <h2>Reciclaje Tecnológico</h2>
                 <p>el reciclaje tecnologico recicla la tecnologia
 
-                esto es importate ya que reciclar la tecnologia recicla lla tecnologia pero para reciclar
+                esto es importate ya que reciclar la tecnologia recicla la tecnologia pero para reciclar
 
                 hay que ser inteligente y gracias a nuestra fundacion ZULEMITO
 
@@ -31,10 +31,12 @@
                 </p>
             </section>
             <section id="cyberbullying">
-                <h2>Ciber Acoso</h2>
-                <p>Información sobre ciber acoso...</p>
+                <h2>Ciber Acoso</h2< >
+                <p></p>
             </section>
+
         </article>
+    
     </main>
     <footer></footer>
     <script src="js/particles.min.js"></script>
